# Blog--API

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
api/: main.py
api/endpoints/: posts.py
api/routes/: posts.py
core/: config.py  database.py
migrations/: env.py
migrations/versions/: 023d2bb44667_create_table_posts.py  b1d0da6ff4c2_alter_primary_key_field.py  e112583309f3_initial_migration.py
models/: post.py
schemas/: post.py
services/: cache.py
tests/: test_posts.http
